--- a/chap1.tex
+++ b/chap1.tex
@@ -2,3 +2,9 @@
 \chapter{Chapter 1 Title}
 \label{chap1}
 \section{Section title}
+Cited references use the standard method to include in the bibliography. For uncited references, use the ``nocite'' command.
+
+\cite{higham1993accuracy}
+\nocite{higham2019new}
+\bibliographystyle{apalike}
+\bibliography{chap1}
